# program_synthesis

./: .gitignore  LICENSE.txt  README.md  experiment.py  pyproject.toml
assembly_game/: __init__.py  environments.py  processor.py
examples/c_and_asm/: README.md  main.c  min.s
examples/game/: assembly_game.py  game.ipynb
notebooks/: game.ipynb  game_min2.ipynb  game_min3.ipynb  game_min4.ipynb  game_minN.ipynb
